2008-02-05  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): added a GtkUIManager to make the
	menu-creation for Maemo a _lot_ easier

2008-02-06  Sven Herzberg  <sven@imendio.com>

	Use LINGUAS according to http://live.gnome.org/GnomeGoals/PoLinguas

	* configure.in,
	* po/LINGUAS: moved the language definition into a po/LINGUAS file

2008-02-05  Sven Herzberg  <sven@imendio.com>

	Finish development of the Maemo stuff wrt missing gnome-doc-utils.

	* Makefile.am: don't pass 'make dist' if gnome-doc-utils macros
	haven't been found
	* configure.in: support running autoconf and aclocal without installed
	gnome-doc-utils macros

2008-02-05  Sven Herzberg  <sven@imendio.com>

	Conditionalize gnome-doc-utils usage

	* Makefile.am: build help only if we have gnome-doc-utils
	* configure.in: also pass if there are no gnome-doc-utils (but then,
	don't build help)

2008-02-05  Sven Herzberg  <sven@imendio.com>

	* configure.in: use AC_HELP_STRING() for proper indentation and line
	breaks in the output of "./configure --help"

2008-02-05  Sven Herzberg  <herzi@gnome-de.org>

	Build the .deb packages for GNOME and Maemo. Based on the Maemo port
	of Monkey-Bubble which was created Jouni Roivas.

	* debian/changelog: merged the changelog from maemo-monkey-bubble
	* debian/control.in: merged the dependencies from maemo-monkey-bubble

2008-02-05  Sven Herzberg  <sven@imendio.com>

	Drop lots of GTK_SIGNAL_FUNC() casts

	* src/ui/ui-main.c: (ui_main_new):
	* src/ui/ui-network-client.c: (ui_network_client_new):

2008-02-05  Sven Herzberg  <sven@imendio.com>

	* configure.in: fix variable expansion

2008-02-03  Sven Herzberg  <sven@imendio.com>

	Now really fix the menubar for Maemo.

	* src/ui/main.c: (main): don't gtk_widget_show_all() the window
	* src/ui/ui-main.c: (ui_main_new): add an extra call to
	gtk_widget_show() for the canvas

2008-01-14  Sven Herzberg  <herzi@gnome-de.org>

	Fix the display of the old menubar by only using gtk_widget_show()