@@ -1,5 +1,11 @@
 2008-02-05  Sven Herzberg  <sven@imendio.com>
 
+	* src/ui/ui-main.c: (new_1_player_game), (quit_program),
+	(pause_game), (new_network_game): simplified some callbacks for
+	upcoming changes
+
+2008-02-05  Sven Herzberg  <sven@imendio.com>
+
 	* src/ui/ui-main.c: (ui_main_new): added a GtkUIManager to make the
 	menu-creation for Maemo a _lot_ easier
 
